--- a/pom.xml
+++ b/pom.xml
@@ -147,7 +147,7 @@
             <goal>shade</goal> </goals> <configuration>
             <transformers>
                 <transformer implementation=
-                                     "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer"> <mainClass>org.polimi.client.ClientStarter</mainClass>
+                                     "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer"> <mainClass>org.polimi.servernetwork.server.ServerStarter</mainClass>
                 </transformer> </transformers>
         </configuration> </execution>
     </executions>
